<resources>
    <string name="app_name">Currency Converter</string>
    <string name="convert">Convert</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="amount">Amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string-array name="currency_codes">

        <item>Afghani AFN</item>
        <item>Algerian Dinar DZD</item>
        <item>Angolan kwanza AOA</item>
        <item>Aruban florin AWG</item>
        <item>Australian Dollars AUD</item>
        <item>Bahamian Dollar BSD</item>
        <item>Bahraini Dinar BHD</item>
        <item>Barbadian Dollar BBD</item>
        <item>Belarusian ruble BYN</item>
        <item>Belizean Dollar BZD</item>
        <item>Bermudian Dollar BMD</item>
        <item>Bhutan Ngultrum BTN</item>
        <item>Boliviano BOB</item>
        <item>Bosnia-Herzegovina Convertible Marka BAM</item>
        <item>Brazil BRL</item>
        <item>Bruneian Dollar BND</item>
        <item>Burundi Franc BIF</item>
        <item>Cambodian Riel KHR</item>
        <item>Canadian Dollar CAD</item>
        <item>Cayman Islands Dollar KYD</item>
        <item>Central African CFA Franc XAF</item>
        <item>CFP Franc XPF</item>
        <item>Chilean Peso CLP</item>
        <item>Colombian peso COP</item>
        <item>Comorian Franc KMF</item>
        <item>Congolese Frank CDF</item>
        <item>Costa Rican Colon CRC</item>
        <item>Croatian Dinar HRK</item>
        <item>Cuban Peso CUC</item>
        <item>Cuban Peso CUP</item>
        <item>Dalasi GMD</item>
        <item>Danish Krone DKK</item>
        <item>Dirham AED</item>
        <item>Djiboutian Franc DJF</item>
        <item>Dominican Peso DOP</item>
        <item>Dram AMD</item>
        <item>East Caribbean Dollar XCD</item>
        <item>Egyptian Pound EGP</item>
        <item>Eritrean nakfa ERN</item>
        <item>Escudo CVE</item>
        <item>Ethiopian Birr ETB</item>
        <item>Ethiopian Birr IRR</item>
        <item>Euro EUR</item>
        <item>Falkland Pound FKP</item>
        <item>Fijian Dollar FJD</item>
        <item>Forint HUF</item>
        <item>Ghana cedi GHS</item>
        <item>Gibraltar Pound GIP</item>
        <item>Gold XAU</item>
        <item>Gourde HTG</item>
        <item>Guernsey pound GGP</item>
        <item>Guinean Franc GNF</item>
        <item>Guyanaese Dollar GYD</item>
        <item>Hong Kong Dollar HKD</item>
        <item>Icelandic Krona ISK</item>
        <item>Indian Rupee INR</item>
        <item>Indonesian Rupiah IDR</item>
        <item>Iraqi Dinar IQD</item>
        <item>Jamaican Dollar JMD</item>
        <item>Japanese Yen JPY</item>
        <item>Jersey Pound JEP</item>
        <item>Jordanian Dinar JOD</item>
        <item>Kazakhstani Tenge KZT</item>
        <item>Kenyan Shilling KES</item>
        <item>Koruna CZK</item>
        <item>Kuwaiti Dinar KWD</item>
        <item>Kyrgyzstani som KGS</item>
        <item>Lao Kip LAK</item>
        <item>Lari GEL</item>
        <item>Lebanese Pound LBP</item>
        <item>Lek ALL</item>
        <item>Lempira HNL</item>
        <item>Lesotho Loti LSL</item>
        <item>Lev BGN</item>
        <item>Liberian Dollar LRD</item>
        <item>Libyan Dinar LYD</item>
        <item>Macanese Pataca MOP</item>
        <item>Macedonian Denar MKD</item>
        <item>Malagasy Ariary MGA</item>
        <item>Malawian Kwacha MWK</item>
        <item>Malaysian Ringgit MYR</item>
        <item>Maldivian Rufiyaa MVR</item>
        <item>Manat AZN</item>
        <item>Manx pound IMP</item>
        <item>Mauritanian Ouguiya MRU</item>
        <item>Mauritian Rupee MUR</item>
        <item>Mexican Peso MXN</item>
        <item>Moldovan Leu MDL</item>
        <item>Mongolian Tögrög MNT</item>
        <item>Moroccan Dirham MAD</item>
        <item>Mozambican Metical MZN</item>
        <item>Myanmar Kyat MMK</item>
        <item>Namibian Dollar NAD</item>
        <item>Nepalese Rupee NPR</item>
        <item>Netherlands Antilles Guilder ANG</item>
        <item>New Taiwan Dollar TWD</item>
        <item>New Zealand Dollar NZD</item>
        <item>Nicaraguan Córdoba NIO</item>
        <item>Nigerian Naira NGN</item>
        <item>Norwegian Krone NOK</item>
        <item>Omani Rial OMR</item>
        <item>Pakistani Rupee PKR</item>
        <item>Panamanian Balboa PAB</item>
        <item>Papua New Guinean Kina PGK</item>
        <item>Paraguayan Guaraní PYG</item>
        <item>Peso ARS</item>
        <item>Philippine Peso PHP</item>
        <item>Polish Złoty PLN</item>
        <item>Pula BWP</item>
        <item>Qatari Riyal QAR</item>
        <item>Quetzal GTQ</item>
        <item>Romanian Leu RON</item>
        <item>Russian Ruble RUB</item>
        <item>Rwandan Franc RWF</item>
        <item>Saint Helenian Pound SHP</item>
        <item>Salvadoran Colón SVC</item>
        <item>Samoan Tala WST</item>
        <item>Sao Tomean Dobra STN</item>
        <item>Saudi Riyal SAR</item>
        <item>Serbian Dinar RSD</item>
        <item>Seychellois Rupee SCR</item>
        <item>Shekel ILS</item>
        <item>Sierra Leonean Leone SLL</item>
        <item>Silver Ounce XAG</item>
        <item>Singapore Dollar SGD</item>
        <item>Sol PEN</item>
        <item>Solomon Islands Dollar SBD</item>
        <item>Somali Shilling SOS</item>
        <item>South African Rand ZAR</item>
        <item>South Korean Won KRW</item>
        <item>South Sudanese Pound SSP</item>
        <item>Special Drawing Rights XDR</item>
        <item>Sri Lankan Rupee LKR</item>
        <item>Sterling GBP</item>
        <item>Sudanese Pound SDG</item>
        <item>Surinamese Dollar SRD</item>
        <item>Swazi Lilangeni SZL</item>
        <item>Swedish Krona SEK</item>
        <item>Swiss Franc CHF</item>
        <item>Syrian Pound SYP</item>
        <item>Tajikistani Somoni TJS</item>
        <item>Taka BDT</item>
        <item>Tanzanian Shilling TZS</item>
        <item>Thai Baht THB</item>
        <item>Tongan Paʻanga TOP</item>
        <item>Trinidad and Tobago Dollar TTD</item>
        <item>Tunisian Dinar TND</item>
        <item>Turkish Lira TRY</item>
        <item>Turkmenistani Manat TMT</item>
        <item>Ugandan Shilling UGX</item>
        <item>Ukrainian Hryvnia UAH</item>
        <item>United States Dollar USD</item>
        <item>Uruguayan Peso UYU</item>
        <item>Uzbekistani Som UZS</item>
        <item>Vanuatu Vatu VUV</item>
        <item>Venezuelan Bolívar VES</item>
        <item>Vietnamese Dong VND</item>
        <item>West African CFA Franc XOF</item>
        <item>Yemeni Rial YER</item>
        <item>Yuan Renminbi CNY</item>
        <item>Zambian Kwacha ZMW</item>
        <item>Zimbabwean Dollar ZWL</item>









































































































































































































































































































































    </string-array>
</resources>