<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/currency_converter"
        android:gravity="center"
        android:textSize="42sp"
        android:textStyle="bold"
        android:textColor="#8BC34A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFromAmt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:layout_marginTop="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="@id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFromAmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="#8BC34A"
            android:textStyle="bold"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFromCurrency"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/from"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tilFromAmt"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="@id/tvTitle">

        <AutoCompleteTextView
            android:id="@+id/actvFromCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="USD"
            android:textColor="#8BC34A"
            android:textStyle="bold"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilToCurrency"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/to"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tilFromCurrency"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="@id/tvTitle">

        <AutoCompleteTextView
            android:id="@+id/actvToCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="INR"
            android:textColor="#8BC34A"
            android:textStyle="bold"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/convert"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tilToCurrency"
        app:layout_constraintStart_toStartOf="@+id/tilToCurrency"
        app:layout_constraintTop_toBottomOf="@+id/tilToCurrency" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="#8BC34A"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tilToCurrency"
        app:layout_constraintStart_toStartOf="@+id/tilToCurrency"
        app:layout_constraintTop_toTopOf="@+id/btnConvert"
        app:layout_constraintVertical_bias="0.259"
        tools:text="1 USD = 72 INR" />

<!--    <ProgressBar-->
<!--        android:id="@+id/progressBar"-->
<!--        style="?android:attr/progressBarStyle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/tilToCurrency"-->
<!--        app:layout_constraintStart_toStartOf="@+id/tilToCurrency"-->
<!--        app:layout_constraintTop_toTopOf="@+id/btnConvert"-->
<!--        app:layout_constraintVertical_bias="0.33" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
